[package]
name = "aos-node-hosted"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[features]
default = []
e2e-tests = []
legacy-bins = []

[dependencies]
aos-authoring = { path = "../aos-authoring" }
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-effect-adapters = { path = "../aos-effect-adapters" }
aos-effect-types = { path = "../aos-effect-types" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
aos-wasm-abi = { path = "../aos-wasm-abi" }

anyhow = "1"
aes-gcm-siv = "0.11"
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
getrandom = "0.2"
hex = "0.4"
object_store = { version = "0.13.1", features = ["aws"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
rdkafka = "0.39.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
aos-wasm-build = { path = "../aos-wasm-build" }
serial_test = "3"
tempfile = "3"

[[bin]]
name = "aos-node-hosted"
path = "src/main.rs"
test = false
required-features = ["legacy-bins"]

[[bin]]
name = "hosted-prof"
path = "src/bin/hosted-prof.rs"
test = false

[[test]]
name = "blobstore_broker_e2e"
path = "tests_e2e/blobstore_broker_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "http_control_e2e"
path = "tests_e2e/http_control_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "kafka_broker_backend_e2e"
path = "tests_e2e/kafka_broker_backend_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "kafka_broker_e2e"
path = "tests_e2e/kafka_broker_e2e.rs"
required-features = ["e2e-tests"]
