[package]
name = "aos-node-local"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-effect-adapters = { path = "../aos-effect-adapters" }
aos-effect-types = { path = "../aos-effect-types" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
aos-wasm-abi = { path = "../aos-wasm-abi" }

anyhow = "1"
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
aos-air-exec = { path = "../aos-air-exec" }
indexmap = "2"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wat = "1"

[[bin]]
name = "aos-node-local"
path = "src/main.rs"
