[package]
name = "aos-node"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-effect-adapters = { path = "../aos-effect-adapters" }
aos-effect-types = { path = "../aos-effect-types" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-runtime = { path = "../aos-runtime" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
utoipa = "5.4"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
aos-air-exec = { path = "../aos-air-exec" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
indexmap = "2"
tempfile = "3"
wat = "1"
