[package]
name = "aos-node"
version = "0.1.0"
edition = "2024"
publish = false
autobins = false

[features]
default = []
e2e-tests = []

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-effect-adapters = { path = "../aos-effect-adapters" }
aos-effect-types = { path = "../aos-effect-types" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aes-gcm-siv = "0.11"
anyhow = "1"
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
futures = "0.3"
getrandom = "0.2"
hex = "0.4"
object_store = { version = "0.13.1", features = ["aws"] }
rdkafka = "0.39.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
utoipa = "5.4"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
aos-air-exec = { path = "../aos-air-exec" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aos-wasm-build = { path = "../aos-wasm-build" }
indexmap = "2"
serial_test = "3"
tempfile = "3"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }
wat = "1"

[[test]]
name = "blobstore_broker_e2e"
path = "tests_e2e/blobstore_broker_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "http_control_e2e"
path = "tests_e2e/http_control_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "kafka_broker_backend_e2e"
path = "tests_e2e/kafka_broker_backend_e2e.rs"
required-features = ["e2e-tests"]
