[package]
name = "aos-node"
version.workspace = true
edition.workspace = true
publish.workspace = true
autobins = false

[features]
default = []
e2e-tests = []

[dependencies]
aos-air-types.workspace = true
aos-cbor.workspace = true
aos-effect-adapters.workspace = true
aos-effect-types.workspace = true
aos-effects.workspace = true
aos-kernel.workspace = true
aos-wasm-abi.workspace = true
aes-gcm-siv = "0.11"
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
dotenvy.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
object_store = { version = "0.13.1", features = ["aws"] }
rdkafka = "0.39.0"
rusqlite.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
aos-air-exec.workspace = true
aos-wasm-abi.workspace = true
aos-wasm-build.workspace = true
fabric-protocol.workspace = true
indexmap.workspace = true
serial_test = "3"
tempfile.workspace = true
temp-env = { version = "0.3", features = ["async_closure"] }
tower.workspace = true
wat.workspace = true

[[test]]
name = "blobstore_broker_e2e"
path = "tests_e2e/blobstore_broker_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "http_control_e2e"
path = "tests_e2e/http_control_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "kafka_broker_backend_e2e"
path = "tests_e2e/kafka_broker_backend_e2e.rs"
required-features = ["e2e-tests"]
