[package]
name = "aos-smoke"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-kernel = { path = "../aos-kernel" }
aos-store = { path = "../aos-store" }
aos-air-exec = { path = "../aos-air-exec" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aos-wasm-sdk = { path = "../aos-wasm-sdk" }
aos-effects = { path = "../aos-effects" }
aos-host = { path = "../aos-host", features = ["test-fixtures"] }
aos-wasm-build = { path = "../aos-wasm-build" }
clap = { version = "4", features = ["derive"] }
indexmap = "2"
once_cell = "1"
camino = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
