[package]
name = "aos-smoke"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
aos-air-types.workspace = true
aos-agent.workspace = true
aos-authoring.workspace = true
aos-cbor.workspace = true
aos-effect-types.workspace = true
aos-kernel.workspace = true
aos-node.workspace = true
aos-sys.workspace = true
aos-air-exec.workspace = true
aos-wasm-abi.workspace = true
aos-wasm-sdk.workspace = true
aos-effects.workspace = true
aos-effect-adapters = { workspace = true, features = ["e2e-tests"] }
aos-wasm-build.workspace = true
clap.workspace = true
indexmap.workspace = true
once_cell.workspace = true
camino.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
hex.workspace = true
log.workspace = true
env_logger = "0.11"
walkdir.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
