[package]
name = "aos-sqlite"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }

aes-gcm-siv = "0.11"
getrandom = "0.2"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
