[package]
name = "aos-store"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-cbor = { path = "../aos-cbor" }
aos-air-types = { path = "../aos-air-types" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
anyhow = "1"
thiserror = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
indexmap = "2"
