[package]
name = "aos-sys"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "workspace"
path = "src/bin/workspace.rs"

[[bin]]
name = "http_publish"
path = "src/bin/http_publish.rs"

[[bin]]
name = "cap_enforce_http_out"
path = "src/bin/cap_enforce_http_out.rs"

[[bin]]
name = "cap_enforce_llm_basic"
path = "src/bin/cap_enforce_llm_basic.rs"

[[bin]]
name = "cap_enforce_workspace"
path = "src/bin/cap_enforce_workspace.rs"

[[bin]]
name = "cap_enforce_governance"
path = "src/bin/cap_enforce_governance.rs"

[dependencies]
aos-wasm-sdk = { path = "../aos-wasm-sdk" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
