[package]
name = "aos-sys"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "workspace"
path = "src/bin/workspace.rs"

[[bin]]
name = "http_publish"
path = "src/bin/http_publish.rs"

[[bin]]
name = "cap_enforce_http_out"
path = "src/bin/cap_enforce_http_out.rs"

[[bin]]
name = "cap_enforce_llm_basic"
path = "src/bin/cap_enforce_llm_basic.rs"

[[bin]]
name = "cap_enforce_host"
path = "src/bin/cap_enforce_host.rs"

[[bin]]
name = "cap_enforce_workspace"
path = "src/bin/cap_enforce_workspace.rs"

[[bin]]
name = "cap_enforce_governance"
path = "src/bin/cap_enforce_governance.rs"

[dependencies]
aos-wasm-sdk.workspace = true
aos-wasm-abi.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_bytes.workspace = true
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
