[package]
name = "aos-sys"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "workspace"
path = "src/bin/workspace.rs"

[dependencies]
aos-wasm-sdk.workspace = true
aos-wasm-abi.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_bytes.workspace = true
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
