[package]
name = "aos-wasm-build"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Deterministic WASM compiler for AOS reducers"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
which = "4"
home = "0.5.5"
walkdir = "2"
hex = "0.4"
