[package]
name = "aos-wasm-build"
version.workspace = true
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"
description = "Deterministic WASM compiler for AOS workflows"

[dependencies]
anyhow.workspace = true
camino.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which = "4"
home = "0.5.5"
walkdir.workspace = true
hex.workspace = true
log.workspace = true
toml = "0.8"
