[package]
name = "aos-wasm-sdk"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
std = []

[dependencies]
aos-effect-types = { path = "../aos-effect-types" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-effects = { path = "../aos-effects" }
serde_json = "1"
