[package]
name = "aos-wasm-sdk"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
std = []

[dependencies]
aos-effect-types.workspace = true
aos-wasm-abi.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_bytes.workspace = true
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
aos-air-types.workspace = true
aos-effects.workspace = true
serde_json.workspace = true
